objects/scormanywhere__Transcript_Stats__c.object
<CustomObject>
    <fields>
        <fullName>scormanywhere__Attempts__c</fullName>
        <label>Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Course__c</fullName>
        <label>Media</label>
        <referenceTo>scormanywhere__Course__c</referenceTo>
        <relationshipLabel>Transcript Stats</relationshipLabel>
        <relationshipName>Transcript_Stats</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Dislikes__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dislikes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Likes__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Likes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Public_User_Id__c</fullName>
        <externalId>true</externalId>
        <label>Public User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Stars__c</fullName>
        <label>Stars</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>scormanywhere__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Transcript_Stats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Votes__c</fullName>
        <label>Votes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Transcript Stats</label>
    <listViews>
        <fullName>scormanywhere__All</fullName>
        <columns>NAME</columns>
        <columns>scormanywhere__Course__c</columns>
        <columns>scormanywhere__Likes__c</columns>
        <columns>scormanywhere__Dislikes__c</columns>
        <columns>scormanywhere__Stars__c</columns>
        <columns>scormanywhere__Attempts__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TS-{0}</displayFormat>
        <label>Transcript Stats Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transcript Stats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>